# trade-desk

./: .ggshieldignore  .gitignore  .trufflehogignore  API_DOCUMENTATION_ENHANCEMENTS.md  AUTH_SUMMARY_AND_NEXT_STEPS.md  BACKEND_REFACTORING_SUMMARY.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE.md  CURRENT_STATUS.md  DAY_3_ZERODHA_API_EXPLORATION.md  DAY_4_WORK.md  DEPLOYMENT_COMPLETE.md  ENVIRONMENT_SETUP.md  FIXES_AND_SECURITY_SUMMARY.md  FRONTEND_SETUP.md  FUNDAMENTALS_COMPREHENSIVE_FIX.md  FUNDAMENTALS_IMPLEMENTATION_SUMMARY.md  FUNDAMENTAL_DATA_OPTIONS.md  IMPLEMENTATION_STATUS.md  JWT_MIGRATION_COMPLETE.md  JWT_MIGRATION_PLAN.md  MASTER_REFERENCE.md  Makefile  NEXT_STEPS_CHECKLIST.md  NIFTY50_SETUP.md  PHASE2_PROGRESS.md  QUICK_START.md  QUICK_TEST.sh  README.md  READY_TO_TEST.md  RISK_MANAGEMENT_TESTING.md  SECURE_DOCS_GUIDE.md  SECURITY.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_IMPROVEMENTS_PLAN.md  SECURITY_MIGRATION_SUMMARY.md  SECURITY_TOOLS_GUIDE.md  SETUP_FILES_REFERENCE.md  SETUP_INSTRUCTIONS.md  SETUP_VERIFIED.md  (+27 more)
.cleanup_backup_20251115_072954/: API_FIXES_SUMMARY.md  API_TESTING_PLAN.md  FINAL_TESTING_GUIDE.md  GCP_FIREWALL_SETUP.md  JWT_MIGRATION_COMPLETE.md  NEXT_API_TESTING.md  REMAINING_ENDPOINTS_TESTING.md  REMAINING_WORK.md  STATUS_CHECK.md  STREAMING_API_FIX.md  STREAMING_API_FIX_FINAL.md  STREAMING_UPDATE_FIX.md  SWAGGER_UI_FIX.md  TESTING_STATUS.md  (+18 more)
backend/: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251111_1321_b49f4c6ce613_add_broker_sessions_table.py  20251112_062115_add_audit_tables.py  20251112_064150_add_risk_management_tables.py  20251114_0729_987461a964ab_add_user_id_to_broker_sessions.py  20251117_0637_326c2e477aad_add_fundamentals_tables.py  20260415_215435_ce420610b12a_add_portfolio_snapshots.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: __init__.py  audit.py  auth.py  broker.py  fundamentals.py  health.py  orders.py  risk.py  technical_analysis.py  zerodha_common.py  zerodha_data_management.py  zerodha_simple.py  zerodha_streaming.py
backend/app/brokers/: __init__.py  base.py  indstocks.py  zerodha.py
backend/app/models/: __init__.py  audit.py  broker_connection.py  broker_session.py  fundamentals.py  market_data.py  order.py  portfolio_snapshot.py  position.py  risk_config.py  strategy.py  user.py
backend/app/routes/: __init__.py  auth.py  risk.py  zerodha_test.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  fundamentals_service.py  indstocks_service.py  risk_manager.py  snapshot_scheduler.py  symbol_mapping_service.py  technical_analysis_service.py  token_refresh_service.py  zerodha_data_service.py  zerodha_order_service.py  zerodha_service.py  zerodha_streaming_service.py
backend/app/utils/: crypto.py  market_calendar.py
backend/config/: nse_holidays.yaml
backend/scripts/: create_default_user.py  init_db.py
backend/tests/: conftest.py
backend/tests/integration/: test_setup.py  test_zerodha.py
backend/tests/unit/: test_config.py  test_database.py  test_health.py  test_main_endpoints.py
(+116 files in other folders)
